@startuml
skin rose

left to right direction

class Tren{

- Identificador: String
- Ruta: String
- Precio boleto: int
- Descripcion: String
- Funcionamiento: String
+ Tren(Identificador: String, Ruta: String, Precio boleto: int,Descripcion: String, Funcionamiento: String)
+ getIdentificador(): String
+ getRuta(): String
+ getPrecioboleto(): int
+ getDescripcion(): String
+ getFuncionamiento(): String
+ setIdentificador(): String
+ setPrecioBoleto(): int
+ setDescripcion(): String
+ setFuncionamiento(): String
}

class Trabajador{

- Nombre completo: String
- Cargo: String
- Salario: int
- Experiencia: int
+ Trabajador(Nombre completo: String, Cargo: String, Salario: int, Experiencia: int)
+ getNombrecompleto(): String
+ getCargo(): String
+ getSalario(): int
+ getExperiencia(): int
+ setNombrecompleto(): String
+ setCargo(): String
+ setSalario(): int
+ setExperiencia(): int

}
class SistemaImpl{

+ SistemaImpl()
+ Menu(): Void
+ estaEnRuta(String localidad, String tipoRuta): boolean
}

interface Sistema{
+ Menu(): Void
+ MensajeMenu(): Void
+ registrarTren(): Void
+ registrarTrabajador(): Void
+ actualizarFuncionamientoDeTren(): Void
+ busquedaDeViajes(): Void
+ estadisticas(): Void
}

SistemaImpl ..|> Sistema : implementa
Trabajador --> SistemaImpl: -trabajadores : ArrayList<Trabajador>
Tren --> SistemaImpl: -trenes : ArrayList<Tren>
@enduml